--- a/vignettes/IntrotoD3mirt.Rmd
+++ b/vignettes/IntrotoD3mirt.Rmd
@@ -1,14 +1,11 @@
 ---
 title: "Introduction to D3mirt Analysis"
-author: "Erik Forsberg"
+package: D3mirt
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Introduction to D3mirt Analysis}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
-editor_options: 
-  markdown: 
-    wrap: sentence
 ---
 
 ```{r, include = FALSE}
@@ -18,7 +15,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup, message = FALSE}
+```{r setup, message = FALSE, include = FALSE}
 library(D3mirt)
 knitr::knit_hooks$set(webgl = hook_webgl)
 ```
@@ -196,7 +193,10 @@ x <- x[,3:22] # Remove columns for age and gender
 If the default mode `efa = TRUE` is not changed, the function first does a EFA with three factors as default before performing the model identification.
 In this example, however, the factor loadings are already available in the package file "efa.Rdata" and so the function call will only identify the model and not perform an EFA (therefore `efa = FALSE`).
 
-```{r}
+```{r, include = FALSE}
+load("efa.Rdata")
+```
+```{r, eval = FALSE}
 # Optional: Load the EFA data for this example directly from the package file
 load(system.file("extdata/efa.Rdata", package = "D3mirt"))
 ```
@@ -209,7 +209,7 @@ summary(a)
 
 The output consists of an $S3$ object of class `modid` containing data frames with model identification items, order of factor strength (based on sum of squares), and item factor loadings.
 Using the `summary()` function, we first get a printed message telling us the number of items and the number of factors used in the analysis together with the suggested model identification items.
-As can be seen, the items that are suggested by `modid()` to identify the model in this example are the items "W7Q3", for the $x$-axis, and "W7Q20", for the $y$-axis.
+The items that are suggested by `modid()` to identify the model in this example are the items "W7Q3", for the $x$-axis, and "W7Q20", for the $y$-axis.
 Next, we find data frames that hold all the model identification items (`Item.1...Item.n`) selected by `modid()` together with the items' absolute sum score (`ABS`), one frame for the sum of squares for factors sorted in descending order, and one frame for item factor loadings.
 
 The absolute sum scores for the model identification items indicate statistical fit to the structural assumptions of the DMIRT model and are sorted with the lowest absolute sum score highest up.
@@ -318,7 +318,7 @@ The three-dimensional compensatory model is specified so that all items load on 
 The fitting of the model is preferably done with the `mirt()` (Chalmers, 2012) function.
 Observe that the START and FIXED commands are used to fix the slope parameters on the second, $a2$, and third, $a3$.
 factor for item $_1$ (W7Q3), and the slope on the third, $a3$, factor for item $i_2$ (W7Q20).
-However, because the fitting of the compensatory model in the `mirt()` function takes a long time, the item parameters for this example are contained in a data frame that is available in the package file "mod1.Rdata". 
+However, because the fitting of the compensatory model in the `mirt()` function takes a long time, the item parameters for this example are contained in a data frame that is available in the package file "mod1.Rdata".
 
 ```{r, message = FALSE, results = 'hide', eval = FALSE}
 # Load data
@@ -356,9 +356,13 @@ mod1 <- mirt::mirt(x,
 ### The `D3mirt()` Function Call
 
 The `D3mirt()` function prints a short report containing the number of items used and the levels of difficulty of the items when the estimation is done.
-If construct vectors are used, the function will also print the number of construct vectors and the names of the items included in each construct (for an example see below). The `summary()` function is used to inspect the DMIRT estimates.
+If construct vectors are used, the function will also print the number of construct vectors and the names of the items included in each construct (for an example see below).
+The `summary()` function is used to inspect the DMIRT estimates.
 
-```{r}
+```{r, include = FALSE}
+load("mod1.Rdata")
+```
+```{r, eval = FALSE}
 # Optional: Load the mod1 as a data frame directly from the package file
 load(system.file("extdata/mod1.Rdata", package = "D3mirt"))
 ```
@@ -485,7 +489,7 @@ The user has the option of plotting on one level of difficulty at a time with th
 Note, *difficulty* refers to the number of item response functions, i.e., the total number of response options minus one.
 In this case, $6$ response options were used which means that the model has $5$ levels of difficulty.
 
-```{r, testg4, webgl = TRUE, fig.width = 7, fig.height = 7}
+```{r, testg4, webgl=TRUE, fig.width = 7, fig.height = 7}
 # Plot RGL device on item difficulty level 5
 plot(g, diff.level = 5, 
         view = c(15, 20, 0.6))
@@ -542,7 +546,10 @@ f <- mirt::fscores(mod1,
                    full.scores.SE = FALSE, QMC = TRUE)
 ```
 
-```{r}
+```{r, include = FALSE}
+load("fscores.Rdata")
+```
+```{r, eval = FALSE}
 # Optional: Load the respondent factor scores for this example directly from the package file
 load(system.file("extdata/fscores.Rdata", package = "D3mirt"))
 ```
